--- a/site_ferias/home.html
+++ b/site_ferias/home.html
@@ -12,11 +12,11 @@
     <div class="rectangle3"></div>
 
     <div>
-        <a href="/list.html"><button class="btn" onclick="welcome()">Acessar Lista</button></a>
+        <a href="list.html"><button class="btn" onclick="welcome()">Acessar Lista</button></a>
     </div>
 
     <h1>What I did in my vacations?</h1>
-    <img src="/img/flower.png" class="img">
+    <img src="img/flower.png" class="img">
 
 </body>
 
