--- a/site_ferias/list.html
+++ b/site_ferias/list.html
@@ -13,16 +13,16 @@
     <div class="rectangle2"></div>
 
     <div>
-        <a><img src="/img/studying.jpg" title="Studying" class="img1"></a>
-        <a><img src="/img/family.jpg" class="img2"></a>
-        <a><img src="/img/healthy_morning.jpg" class="img3"></a>
-        <a><img src="/img/puppy.jpg" class="img4"></a>
-        <a><img src="/img/god.jpg" class="img5"></a>
-        <a><img src="/img/teach.jpg" class="img6"></a>
-        <a><img src="/img/travel.jpg" class="img7"></a>
-        <a><img src="/img/recepes.jpg" class="img8"></a>
-        <a><img src="/img/coffe_art.jpg" class="img9"></a>
-        <a><img src="/img/dev.jpg" class="img10"></a>
+        <a><img src="img/studying.jpg" title="Studying" class="img1"></a>
+        <a><img src="img/family.jpg" class="img2"></a>
+        <a><img src="img/healthy_morning.jpg" class="img3"></a>
+        <a><img src="img/puppy.jpg" class="img4"></a>
+        <a><img src="img/god.jpg" class="img5"></a>
+        <a><img src="img/teach.jpg" class="img6"></a>
+        <a><img src="img/travel.jpg" class="img7"></a>
+        <a><img src="img/recepes.jpg" class="img8"></a>
+        <a><img src="img/coffe_art.jpg" class="img9"></a>
+        <a><img src="img/dev.jpg" class="img10"></a>
 
         <p class="title1">Studying</p>
         <p class="title2">Family</p>
