--- a/site_ferias/home.html
+++ b/site_ferias/home.html
@@ -22,8 +22,8 @@
 <script>
 
 function welcome(){
-
-}
+    alert("Welcome! \n°°°°°°°°°°°°°°°°°°°°°°°°° \nSite created by: Lívia Macedo de Oliveira <3");
+    }
 
 </script>
 
